Istio/docker-desktop/kiali-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - kiali.istio-system.svc.cluster.local
    - kiali.127-0-0-1.nip.io
  gateways:
    - istio-system/default
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
