Istio/docker-desktop/nginx-deploy-with-istio.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 9376
      targetPort: 80
  type: ClusterIP

---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: default
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.nip.io"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx-vs
  namespace: default
spec:
  gateways:
    - istio-system/default
  hosts:
    - nginx-svc.default.svc.cluster.local
    - nginx.127-0-0-1.nip.io
  http:
    - route:
        - destination:
            host: nginx-svc.default.svc.cluster.local
            port:
              number: 9376
